clusters/talos-robbinsdale/apps/gatus/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gatus
  namespace: gatus
  annotations:
    item.homer.rajsingh.info/name: "Gatus"
    item.homer.rajsingh.info/subtitle: "Service Monitoring"
    item.homer.rajsingh.info/logo: "https://raw.githubusercontent.com/walkxcode/dashboard-icons/main/svg/gatus.svg"
    item.homer.rajsingh.info/keywords: "monitoring, uptime, status"
    # item.homer.rajsingh.info/type: "Ping"
    # item.homer.rajsingh.info/endpoint: "http://gatus.gatus.svc.cluster.local"
    # item.homer.rajsingh.info/method: "GET"
    # item.homer.rajsingh.info/successCodes: "200, 201"

    service.homer.rajsingh.info/name: "Infrastructure"
    service.homer.rajsingh.info/icon: "fas fa-server"
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: home
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: home
  hostnames:
    - "status.${CLUSTER_DOMAIN}"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: gatus
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
